@@ -6,6 +6,9 @@ Changelog for plone.reload
 0.4 Unreleased
 --------------
 
+    - Integrated xreload.py from RefreshNG and added a first working version
+      of a general manual code reload feature.
+      [hannosch]
 
 0.3 Released February 21, 2008
 ------------------------------
